--- a/springBoot/笔记/笔记.md
+++ b/springBoot/笔记/笔记.md
@@ -131,3 +131,35 @@ yml配置的时候，key和value之间一定要加一个英文的空格！
 注解的核心是 反射。
 
 # SPI机制
+
+
+
+
+
+# 注解要复习一下
+
+Q1:一般不搭建框架，几乎不使用的。
+
+
+
+Q2:什么是松散绑定？
+
+
+
+Q3:大部分组件都是配对使用的，比如校验注解。
+
+jsr303
+
+Q4: spel
+
+
+
+以上是@value和@ConfigurationProperties的区别。
+
+
+
+路径优先级别：
+
+![image-20220501151047113](https://mytyproa.oss-cn-shanghai.aliyuncs.com/learJavaCode/202205011510214.png)
+
+这块多看看官网，加深印象即可。
